# mantis-oracle

./: .gitignore  CHANGELOG.md  LICENSE  PAB.md  ReadMe-PAB.md  ReadMe.md  Tutorial.md  alonzo-purple.mantis-oracle  alonzo-purple.plutus  build-documentation.sh  cabal.project  default.nix  example-data-0.json  example-data-1.json  hie.yaml  mantis-oracle.cabal  mantra-oracle.cabal  oracle.plutus  redeemer-delete.json  redeemer-read.json  redeemer-write.json  shell.nix  sofr-oracle.cabal  test-alonzo-purple.sh  testing.sh  testnet.mantra-oracle
app/: Main.hs  Orphans.hs  client.hs  controller.hs  pab.hs  test.hs
docs/: Mantis-Oracle-Client-PAB.html  Mantis-Oracle-Client.html  Mantis-Oracle-Controller-PAB.html  Mantis-Oracle-Controller.html  Mantis-Oracle-SOFR.html  Mantis-Oracle-Simulate-PAB.html  Mantis-Oracle-Simulate.html  Mantis-Oracle-Submit.html  Mantis-Oracle-Types.html  Mantis-Oracle.html  Mantis-Orphans.html  Mantra-Oracle-Reader.html  Mantra-Oracle-Submit.html  Mantra-Oracle-Types.html  Mantra-Oracle.html  doc-index.html  index.html  mantis-oracle.haddock  mantra-oracle.haddock
docs/src/: Mantis.Oracle.Client.PAB.html  Mantis.Oracle.Client.html  Mantis.Oracle.Controller.PAB.html  Mantis.Oracle.Controller.html  Mantis.Oracle.SOFR.html  Mantis.Oracle.Simulate.PAB.html  Mantis.Oracle.Simulate.html  Mantis.Oracle.Submit.html  Mantis.Oracle.Types.html  Mantis.Oracle.html  Mantis.Orphans.html  Mantra.Oracle.Reader.html  Mantra.Oracle.Submit.html  Mantra.Oracle.Types.html  Mantra.Oracle.html
nix/: sources.json
src/: Main.hs
src/Mantis/: Oracle.hs  Orphans.hs
src/Mantis/Oracle/: Client.hs  Controller.hs  Owner.hs  PAB.hs  SOFR.hs  Simulate.hs  Submit.hs  Test.hs  Types.hs
src/Mantis/Oracle/Client/: PAB.hs
src/Mantis/Oracle/Controller/: PAB.hs
src/Mantis/Oracle/Simulate/: PAB.hs
src/Mantra/: Oracle.hs  Orphans.hs
src/Mantra/Oracle/: Client.hs  Controller.hs  Emulate.hs  Loop.hs  PAB.hs  Reader.hs  SOFR.hs  Simulate.hs  Submit.hs  Types.hs
src/Mantra/Oracle/Client/: PAB.hs
src/Mantra/Oracle/Controller/: PAB.hs
src/Mantra/Oracle/PAB/: Client.hs  Controller.hs  SOFR.hs
src/Mantra/Oracle/Simulate/: PAB.hs
tests/: 00-mint.sh  01-create.sh  02-read.sh  03-write.sh  04-other.sh  05-delete.sh  99-burn.sh  ReadMe.md  config.sh  env.sh  local.sh  query.sh  redeemer-illegal-1.json  redeemer-illegal-2.json  setup.sh
