cabal-version     : 2.4
name              : mantis-oracle
description       : This Cardano oracle reports structured data (namely, the `PlutuxTx.Data` type) to a transaction if the fee, as a quantity of a fungible token, is paid. It can be incorporated into other smart-contract scripts that use the oracle's value in their validation logic.
version           : 0.1.2.0
author            : Brian W Bush <code@functionally.io>
maintainer        : Brian W Bush <code@functionally.io>
copyright         : (c) 2021 Brian W Bush
license           : MIT
license-file      : LICENSE
extra-source-files: ReadMe.md
                  , transaction.png

homepage   : https://github.com/functionally/mantis-oracle/ReadMe.md
bug-reports: https://github.com/functionally/mantis-oracle/issues/

source-repository head
  type    : git
  location: https://github.com/functionally/mantis-oracle.git

library
  hs-source-dirs  : src
  exposed-modules : Mantis.Oracle
                    Mantis.Oracle.Client
                    Mantis.Oracle.Client.PAB
                    Mantis.Oracle.Controller
                    Mantis.Oracle.Controller.PAB
                    Mantis.Oracle.Simulate
                    Mantis.Oracle.Simulate.PAB
                    Mantis.Oracle.SOFR
                    Mantis.Oracle.Types
                    Mantis.Orphans
  build-depends   : base ^>=4.14.1.0
                  , aeson
                  , bytestring
                  , containers
                  , data-default
                  , freer-extras
                  , freer-simple
                  , playground-common
                  , plutus-contract
                  , plutus-ledger
                  , plutus-ledger-api
                  , plutus-pab
                  , plutus-tx
                  , plutus-tx-plugin
                  , plutus-use-cases
                  , prettyprinter
                  , req ^>= 3.9.0
                  , text
                  , uuid
                  , vector
  default-language: Haskell2010
  ghc-options     : -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -Wall

executable mantis-oracle
   hs-source-dirs  : app
   main-is         : Main.hs
   build-depends   : base ^>=4.14.1.0
                   , bytestring
                   , mantis-oracle
                   , optparse-applicative
                   , plutus-contract
                   , plutus-ledger
                   , text
   default-language: Haskell2010
   ghc-options     : -Wall
