cabal-version     : 2.4
name              : mantra-oracle
description       : This Cardano oracle reports structured data (namely, the `PlutuxTx.Data` type) to a transaction if the fee, as a quantity of a fungible token, is paid. It can be incorporated into other smart-contract scripts that use the oracle's value in their validation logic.
version           : 0.4.0.1
author            : Brian W Bush <code@functionally.io>
maintainer        : Brian W Bush <code@functionally.io>
copyright         : (c) 2021 Brian W Bush
license           : MIT
license-file      : LICENSE

homepage   : https://github.com/functionally/mantra-oracle/ReadMe.md
bug-reports: https://github.com/functionally/mantra-oracle/issues/

source-repository head
  type    : git
  location: https://github.com/functionally/mantra-oracle.git


library
  hs-source-dirs   : src
  exposed-modules  : Mantra.Oracle
                     Mantra.Oracle.Client
                     Mantra.Oracle.Client.PAB
                     Mantra.Oracle.Controller
                     Mantra.Oracle.Controller.PAB
                     Mantra.Oracle.Loop
                     Mantra.Oracle.Reader
                     Mantra.Oracle.SOFR
                     Mantra.Oracle.Simulate
                     Mantra.Oracle.Simulate.PAB
                     Mantra.Oracle.Submit
                     Mantra.Oracle.Types
                     Mantra.Orphans
  build-depends    : base ^>=4.14.1.0
                   , aeson
                   , bytestring
                   , cardano-api
                   , containers
                   , data-default
                   , delay
                   , extra
                   , freer-extras
                   , freer-simple
                   , mantra
                   , mtl
                   , openapi3
                   , ouroboros-network
                   , playground-common
                   , plutus-contract
                   , plutus-core
                   , plutus-ledger
                   , plutus-ledger-api
                   , plutus-pab
                   , plutus-tx
                   , plutus-tx-plugin
                   , plutus-use-cases
                   , prettyprinter
                   , req ^>= 3.9.0
                   , serialise
                   , shake
                   , text
                   , time
                   , unordered-containers
                   , uuid
                   , vector
  default-language: Haskell2010
  ghc-options     : -fplugin-opt PlutusTx.Plugin:defer-errors -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -Wall

executable mantra-oracle
   hs-source-dirs  : app
   main-is         : Main.hs
   other-modules   : Paths_mantra_oracle
   autogen-modules : Paths_mantra_oracle
   build-depends   : base ^>=4.14.1.0
                   , aeson
                   , base16-bytestring
                   , bytestring
                   , cardano-api
                   , mantra
                   , mantra-oracle
                   , mtl
                   , optparse-applicative
                   , plutus-contract
                   , plutus-ledger-api
                   , plutus-tx
                   , text
   default-language: Haskell2010
   ghc-options     : -fplugin-opt PlutusTx.Plugin:defer-errors -Wall
